<resources>
    <string name="app_name">ShoppingList</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_measuring_unit">New Measuring Unit</string>
    <string name="measuring_unit">Measuring Unit</string>
    <string name="enter_new_measuring_unit">Enter New Measuring Unit</string>
    <string name="cancel">Cansel</string>
    <string name="ok">Ok</string>
    <string name="new_purchase">New Purchase</string>
    <string name="name">Name</string>
    <string name="count">Count</string>
    <string name="new_name">New Name</string>
    <string name="enter_new_name">Enter New Name</string>
    <string name="enter_new_list_name">Enter New List Name</string>
    <string name="edit">Edit</string>
    <string name="enter_measuring_unit">Enter Measuring Unit</string>
    <string name="enter_name">Enter Name</string>
    <string name="add_measuring_unit">Add Measuring Unit</string>
    <string name="add_list">Add List</string>
    <string name="add_name">Add Name</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="names">Names</string>
    <string name="my_lists">My Lists</string>
    <string name="names_settings">Names Settings</string>
    <string name="measuring_units_settings">Measuring Units Settings</string>
    <string name="successfull">Successfull</string>
    <string name="enter_count">Enter Count</string>
    <string name="new_list">New List</string>
    <string name="list_name">List Name</string>
    <string name="copy_list">List Copy</string>
</resources>