<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:gravity="center"
            android:text="@string/new_name"
            android:textColor="@color/white"
            android:textSize="30sp" />


        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"


            android:layout_centerInParent="true"
            android:gravity="start"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewNumeric"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"

                android:layout_marginBottom="15dp"
                android:lineSpacingExtra="12sp"
                android:text="@string/name"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="20sp"
                android:typeface="normal" />

            <EditText
                android:id="@+id/textEdit"
                android:layout_width="269dp"
                android:layout_height="match_parent"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/enter_new_name"
                android:inputType="text"
                android:minWidth="55dp"
                android:minHeight="48dp"
                android:textAlignment="textStart">

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayout2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:background="@color/primary"
                android:text="@string/cancel"
                android:textColor="@color/white" />

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:background="#fff" />

            <Button
                android:id="@+id/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                android:background="@color/primary"
                android:text="@string/ok"
                android:textColor="@color/white" />

        </LinearLayout>


    </RelativeLayout>
</layout>